# solution-luka-zdilar

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 177f8610338d_create_tickets_table.py
src/tickethub/: config.py  crud.py  database.py  external.py  logging_config.py  main.py  models.py  schemas.py  sync.py
src/tickethub/routers/: stats.py  tickets.py
tests/: Dockerfile  conftest.py  test_tickets.py
tests/github/workflows/: ci.yml
