[project]
name = "tickethub"
version = "0.1.0"
description = "Middleware REST servis koji agregira support tickete iz DummyJSON-a"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.*",
    "uvicorn[standard]>=0.30",
    "httpx==0.27.*",
    "pydantic==2.7.*",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "asgi-lifespan>=2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tickethub"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"